微調整とインデント確認

--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -14,5 +14,8 @@
     <%= form.label :content %>
     <%= form.text_field :content %>
   </div>
-  <%= form.submit %>
+  <%= form.submit :編集完了 %>
+  <div>
+    <%= link_to "つぶやき一覧画面にもどる", blogs_path %>
+  </div>
 <% end %>
