フッターを最下部表示

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+ body {
+   margin: 0;
+   display: flex;
+   flex-flow: column;
+   min-height: 100vh;
+ }
  header{
   background-color: #03a9f4;
-  height: 30px;
-}
+  height: 60px;
+ }
+ main{
+    flex: 1;
+  }
 footer {
+  height: 60px;
   background-color:#03a9f4;
-  height: 30px;
   }
   
